tests/snapshots/cli__gen_bin@cond__else.my.snap
---
source: tests/cli.rs
info:
  program: else.my.out
  args: []
input_file: tests/input/cond/else.my
---
success: true
exit_code: 0
----- stdout -----
correct

----- stderr -----
