tests/snapshots/cli__gen_bin@cond__if.my.snap
---
source: tests/cli.rs
info:
  program: if.my.out
  args: []
input_file: tests/input/cond/if.my
---
success: true
exit_code: 0
----- stdout -----
correct branch

----- stderr -----
