tests/snapshots/cli__gen_bin@cond__nested-else.my.snap
---
source: tests/cli.rs
info:
  program: nested-else.my.out
  args: []
input_file: tests/input/cond/nested-else.my
---
success: true
exit_code: 0
----- stdout -----
correct branch

----- stderr -----
