tests/snapshots/cli__gen_bin@cond__nested-if.my.snap
---
source: tests/cli.rs
info:
  program: nested-if.my.out
  args: []
input_file: tests/input/cond/nested-if.my
---
success: true
exit_code: 0
----- stdout -----
correct branch

----- stderr -----
