tests/snapshots/cli__gen_bin@cond__while-false.my.snap
---
source: tests/cli.rs
info:
  program: while-false.my.out
  args: []
input_file: tests/input/cond/while-false.my
---
success: true
exit_code: 0
----- stdout -----
correctly left the while loop without printing

----- stderr -----
