tests/snapshots/cli__gen_bin@cond__while-true.my.snap
---
source: tests/cli.rs
info:
  program: while-true.my.out
  args: []
input_file: tests/input/cond/while-true.my
---
success: true
exit_code: 0
----- stdout -----
0
1
correctly left the while loop after 2 iterations

----- stderr -----
